--- a/render.yaml
+++ b/render.yaml
@@ -8,7 +8,7 @@ services:
     numInstances: 1
     envVars:
       - key: DB_HOST
-        value: localhost
+        value: containers-us-west-207.railway.app
       - key: DB_USER
         value: root
       - key: DB_PASSWORD
