Atualizando .env.example com todas as variáveis de ambiente necessárias

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,13 @@
-DB_HOST=
-DB_USER=
-DB_PASSWORD=
-DB_NAME=
+# Configurações do Banco de Dados
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=12345678
+DB_NAME=db_usuario
+
+# Configurações de Debug
+DISPLAY_ERRORS=1
+ERROR_REPORTING=E_ALL
+
+# Flag para ambiente Render.com
+RENDER=false
 PORT=80
