--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,7 +4,13 @@ RewriteBase /
 # Se o arquivo ou diretório não existir
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ index.php [L]
+RewriteRule ^(.*)$ index.php [QSA,L]
+
+# Permitir acesso aos arquivos estáticos
+<FilesMatch "\.(css|js|jpg|jpeg|png|gif|ico)$">
+    Order Allow,Deny
+    Allow from all
+</FilesMatch>
 
 # Permitir acesso aos arquivos PHP
 <FilesMatch "\.php$">
@@ -16,3 +22,8 @@ RewriteRule ^(.*)$ index.php [L]
 Header set Access-Control-Allow-Origin "*"
 Header set Access-Control-Allow-Methods "GET, POST, OPTIONS"
 Header set Access-Control-Allow-Headers "Content-Type"
+
+# Configurações de Cache para arquivos estáticos
+<FilesMatch "\.(jpg|jpeg|png|gif|ico|css|js)$">
+    Header set Cache-Control "max-age=31536000, public"
+</FilesMatch>
