--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,34 +1,7 @@
-Options +FollowSymLinks
 RewriteEngine On
 RewriteBase /
 
-# Forçar processamento de PHP
-AddType application/x-httpd-php .php
-
-# Se o arquivo ou diretório não existir, redirecionar para index.php
+# Redirecionar para index.php se o arquivo não existir
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ index.php [QSA,L]
-
-# Permitir acesso aos arquivos estáticos
-<FilesMatch "\.(css|js|jpg|jpeg|png|gif|ico)$">
-    Order Allow,Deny
-    Allow from all
-</FilesMatch>
-
-# Permitir acesso aos arquivos PHP
-<FilesMatch "\.php$">
-    Order Allow,Deny
-    Allow from all
-    SetHandler application/x-httpd-php
-</FilesMatch>
-
-# Configurações de CORS
-Header set Access-Control-Allow-Origin "*"
-Header set Access-Control-Allow-Methods "GET, POST, OPTIONS"
-Header set Access-Control-Allow-Headers "Content-Type"
-
-# Configurações de Cache para arquivos estáticos
-<FilesMatch "\.(jpg|jpeg|png|gif|ico|css|js)$">
-    Header set Cache-Control "max-age=31536000, public"
-</FilesMatch>
+RewriteRule ^(.*)$ index.php [L]
