--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,10 @@
 services:
   # Serviço do MySQL
   - type: pserv
-    name: mysql
+    name: mysql-cadastro
     env: docker
     plan: free
+    region: oregon
     dockerCommand: mysqld --default-authentication-plugin=mysql_native_password
     disk:
       name: mysql
@@ -18,16 +19,21 @@ services:
         value: admin123
       - key: MYSQL_ROOT_PASSWORD
         value: root123
+    healthCheckPath: /
+    healthCheckTimeout: 100
 
   # Serviço Web PHP
   - type: web
     name: cadastro-usuario
     env: docker
+    region: oregon
+    buildCommand: docker build -t cadastro-usuario .
+    startCommand: docker run -p $PORT:80 cadastro-usuario
     dockerfilePath: ./Dockerfile
     dockerContext: .
     plan: free
     numInstances: 1
-    healthCheckPath: /test_db.php
+    healthCheckPath: /health.php
     healthCheckTimeout: 100
     domains:
       - cadastro-usuario.onrender.com
@@ -35,7 +41,7 @@ services:
       - key: DB_HOST
         fromService:
           type: pserv
-          name: mysql
+          name: mysql-cadastro
           property: host
       - key: DB_USER
         value: admin
@@ -51,9 +57,9 @@ services:
         value: "1"
       - key: ERROR_REPORTING
         value: "E_ALL"
-      - key: PHP_INI_SCAN_DIR
-        value: "/var/www/html/config:/usr/local/etc/php/conf.d"
+      - key: PORT
+        value: "10000"
     disk:
-      name: tmp
-      mountPath: /tmp
+      name: data
+      mountPath: /var/www/html/data
       sizeGB: 1
