--- a/docker/php/custom.ini
+++ b/docker/php/custom.ini
@@ -1,10 +1,26 @@
-display_errors = On
-log_errors = On
-error_log = /dev/stderr
-error_reporting = E_ALL
-max_execution_time = 30
-default_socket_timeout = 60
+[PHP]
+; Configurações de memória e tempo
 memory_limit = 128M
+max_execution_time = 30
+max_input_time = 60
+default_socket_timeout = 60
+
+; Configurações de upload
 post_max_size = 20M
 upload_max_filesize = 10M
-max_input_time = 60
+
+; Configurações de sessão
+session.gc_maxlifetime = 1440
+session.cookie_lifetime = 0
+session.cookie_secure = On
+session.cookie_httponly = On
+
+; Configurações de fuso horário
+date.timezone = America/Sao_Paulo
+
+; Configurações de cache
+opcache.enable = 1
+opcache.enable_cli = 0
+opcache.memory_consumption = 128
+opcache.interned_strings_buffer = 8
+opcache.max_accelerated_files = 4000
